--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-range-slider-input": "^3.2.1",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
